--- a/src/app/pages/favourites/favourites.page.html
+++ b/src/app/pages/favourites/favourites.page.html
@@ -1,9 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>favourites</ion-title>
+    <ion-title>Favourites</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
 
-</ion-content>
+  <ion-list>
+  <ion-item *ngFor="let product of favouriteProducts" class="col-md-4 item-product">
+    <ion-avatar slot="start">
+      <ion-img
+          [src]="product.imagePath"
+          alt="{{ product.imagePath }}"
+          class="img-responsive">
+        </ion-img>
+    </ion-avatar>
+    <ion-label>
+      <h2 (click)="showDetails(product)">{{ product.name }}</h2>
+      <h3 (click)="showDetails(product)">{{ product.price }} UAH</h3>
+      <p (click)="showDetails(product)">{{ product.description }}</p>
+    </ion-label>
+
+    <ion-button clear item-end (click)="addToCart(product)">
+        <ion-icon style=" font-size: 20px;" name="cart"></ion-icon>
+      </ion-button>
+      <ion-button clear item-end (click)="onDeleteFavourite(product)">
+        <ion-icon style=" font-size: 20px;" name="trash"></ion-icon>
+      </ion-button>
+
+  </ion-item>
+</ion-list>
