--- a/src/app/pages/signup/signup.page.html
+++ b/src/app/pages/signup/signup.page.html
@@ -16,7 +16,7 @@
       </ion-col>
     </ion-row>
 
-    <form #f="ngForm" (ngSubmit)="onSignin(f)">
+    <form #f="ngForm" (ngSubmit)="onSignup(f)">
       <ion-list>
         <ion-item>
           <ion-label fixed>Mail</ion-label>
