--- a/src/app/pages/products/products.page.html
+++ b/src/app/pages/products/products.page.html
@@ -9,6 +9,13 @@
 
 <ion-content padding>
 
+  <ion-button *ngIf="authService.user | async" ion-item icon-left>
+        <ion-icon name="contact"></ion-icon>
+      {{ (authService.user | async)?.email }}</ion-button>
+      <ion-button ion-item icon-left *ngIf="authService.user | async" (click)="onLogout()">
+        <ion-icon name="log-out"></ion-icon>
+      Logout</ion-button>
+
   <ion-searchbar
     [showCancelButton]="shouldShowCancel"
     [(ngModel)]="term"
